# page-tree

./: GEMINI.md  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.gemini/: settings.json
documents/plans/: design.md  implementation.md
src/page_tree/: __init__.py
src/page_tree/cli/: main.py
src/page_tree/core/: __init__.py  crawler.py  models.py  reporter.py  robots.py  scanner.py  utils.py
tests/core/: test_crawler.py  test_filter.py  test_reporter.py  test_robots.py  test_scanner.py  test_utils.py
