[project]
name = "page-tree"
version = "0.1.0"
description = "指定したサイトのリンク先URLを再帰的に取得するツール"
readme = "README.md"
authors = [
    { name = "y-chiba1008", email = "chiba8e3@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.4.1",
    "httpx>=0.28.1",
]

[project.scripts]
page-tree = "page_tree:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.15",
    "types-beautifulsoup4>=4.12.0.20250516",
]
